Convert technical docs to static pages
